<package>
  <name>rviz_write_button</name>
  <version>0.0.1</version>
  <description>
    A simple button to publish the write message over ROS.
  </description>
  <maintainer email="jbachman@umass.edu">Jack Bachman</maintainer>
  <license>MIT</license>

  <url>https://thecynosure.github.io/nautilus_docs/</url>
  <author email="jbachman@umass.edu">Jack Bachman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rviz</run_depend>
</package>

